refactor taup table as cmd args for depth should not be used, more functional phase calc, code cleanup